Sutter Health/src/objects/Case_Created_In_Error__c.object
<CustomObject>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Created In Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Number__c</columns>
        <columns>isDeleted__c</columns>
        <columns>LOB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases Created In Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>